--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-node-arango",
-  "version": "1.0.4",
+  "version": "1.0.0",
   "description": "NodeJS ArangoDB Provider",
   "homepage": "https://github.com/pkg-wizard/js-node-arango",
   "main": "dist/index.js",
@@ -21,16 +21,16 @@
     "url": "https://github.com/pkg-wizard/js-node-arango/issues"
   },
   "dependencies": {
-    "commonjs-errors": "^1.0.0",
-    "commonjs-logger": "^1.0.0",
     "arangojs": "^7.8.0",
-    "http-status": "^1.5.0"
+    "http-status": "^2.1.0",
+    "js-node-errors": "^1.0.0",
+    "js-node-logger": "^1.0.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.13.2",
-    "prettier": "^3.5.0",
+    "@types/node": "^22.13.4",
+    "prettier": "^3.5.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
